--- a/jellyfish_movement/CMakeLists.txt
+++ b/jellyfish_movement/CMakeLists.txt
@@ -62,13 +62,15 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   set_flight_state.srv
-  set_goalpoint.srv
+  set_gps_goalpoint.srv
 )
 
 ## Generate actions in the 'action' folder
 add_action_files(
   FILES
   ControlGimbal.action
+  MoveToCartesianCoordinates.action
+  MoveToGPSCoordinates.action
 )
 
 ## Generate added messages and services with any dependencies listed here
@@ -110,7 +112,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES jellyfish
-  CATKIN_DEPENDS geometry_msgs std_msgs sensor_msgs rospy message_runtime actionlib_msgs
+  CATKIN_DEPENDS geometry_msgs std_msgs sensor_msgs rospy message_runtime actionlib_msgs marvelmind_nav
 #  DEPENDS system_lib
 )
 ###########
@@ -163,7 +165,11 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS src/scripts/DTLS.py src/scripts/drone_movement_control.py src/scripts/sandbox.py src/scripts/drone_gimbal_control.py
+catkin_install_python(PROGRAMS 
+  src/scripts/DTLS.py src/scripts/drone_movement_control.py 
+  src/scripts/sandbox.py src/scripts/drone_gimbal_control.py
+  src/scripts/sandbox.py src/scripts/movement.py
+  src/scripts/sandbox.py src/scripts/drone_pose_publisher.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
