--- a/jellyfish_movement/package.xml
+++ b/jellyfish_movement/package.xml
@@ -62,6 +62,8 @@
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>actionlib_msgs</build_export_depend>
+  <build_export_depend>marvelmind_nav</build_export_depend>
+  <exec_depend>marvelmind_nav</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
