--- a/jellyfish_vision/jellyfish_vision/CMakeLists.txt
+++ b/jellyfish_vision/jellyfish_vision/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(jellyfish_movement)
+project(jellyfish_vision)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,14 +8,9 @@ project(jellyfish_movement)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  actionlib_msgs
-  geometry_msgs
-  std_msgs
-  sensor_msgs
-  message_generation
+  aruco_ros_wrapper
   roscpp
   rospy
-  dji_sdk
 )
 
 ## System dependencies are found with CMake's conventions
@@ -59,26 +54,24 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  set_flight_state.srv
-  set_gps_goalpoint.srv
-)
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
 
 ## Generate actions in the 'action' folder
-add_action_files(
-  FILES
-  ControlGimbal.action
-  MoveToCartesianCoordinates.action
-  MoveToGPSCoordinates.action
-)
+# add_action_files(
+#   FILES
+#   Action1.action
+#   Action2.action
+# )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  actionlib_msgs
-  std_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -111,10 +104,11 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES jellyfish
-  CATKIN_DEPENDS geometry_msgs std_msgs sensor_msgs rospy message_runtime actionlib_msgs marvelmind_nav
+#  LIBRARIES cv_sandbox
+#  CATKIN_DEPENDS aruco_ros_wrapper roscpp rospy usb_cam
 #  DEPENDS system_lib
 )
+
 ###########
 ## Build ##
 ###########
@@ -128,7 +122,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/jellyfish.cpp
+#   src/${PROJECT_NAME}/cv_sandbox.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -139,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/jellyfish_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/cv_sandbox_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -165,13 +159,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS 
-  src/scripts/DTLS.py src/scripts/drone_movement_control.py 
-  src/scripts/sandbox.py src/scripts/gimbal.py
-  src/scripts/sandbox.py src/scripts/movement.py
-  src/scripts/sandbox.py src/scripts/drone_pose_publisher.py
-  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+# catkin_install_python(PROGRAMS
+#   scripts/my_python_script
+#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
@@ -206,7 +197,7 @@ catkin_install_python(PROGRAMS
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_jellyfish.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_cv_sandbox.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
