--- a/jellyfish_movement/package.xml
+++ b/jellyfish_movement/package.xml
@@ -71,7 +71,9 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>dji_sdk</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>tf</exec_depend>
+  <exec_depend>tf_conversions</exec_depend>
+  <exec_depend>tf2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
 
 
