--- a/jellyfish_vision/jellyfish_vision/CMakeLists.txt
+++ b/jellyfish_vision/jellyfish_vision/CMakeLists.txt
@@ -11,6 +11,10 @@ find_package(catkin REQUIRED COMPONENTS
   aruco_ros_wrapper
   roscpp
   rospy
+  geometry_msgs
+  tf_conversions
+  tf2
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -159,10 +163,10 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  src/basis_changer.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
