--- a/jellyfish_gazebo/jellyfish_urdf/CMakeLists.txt
+++ b/jellyfish_gazebo/jellyfish_urdf/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(jellyfish_sim)
+project(jellyfish_urdf)
 
 find_package(catkin REQUIRED COMPONENTS
 	gazebo_ros
