--- a/jellyfish_gazebo/jellyfish_urdf/package.xml
+++ b/jellyfish_gazebo/jellyfish_urdf/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>jellyfish_sim</name>
+  <name>jellyfish_urdf</name>
   <version>0.0.0</version>
-  <description>The jellyfish_sim package</description>
+  <description>The jellyfish_urdf package</description>
 
   <maintainer email="sharkbonebroth@todo.todo">sharkbonebroth</maintainer>
 
